issues/IF-279::Freerange Column : The gap between freerange column should be 38 px added.

--- a/wp-content/themes/fr-starter-theme/resources/styles/modules/_layout-module.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/modules/_layout-module.scss
@@ -1,5 +1,5 @@
 .layout-module{
-	$layout-module-gutter-size:50px;
+	$layout-module-gutter-size:38px;
 	>.container-fluid{
 		@include make-container();
         padding-left: 0;
